# pran

./: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  readme.md  tsconfig.json
pran-droid/: RustConfig
pran-droid-api/core/: Cargo.toml
pran-droid-api/core/src/: main.rs
pran-droid-api/core/src/images/: create.rs  mod.rs
pran-droid-api/core/src/reactions/: get.rs  mod.rs
pran-droid-api/core/src/reactions/models/: mod.rs  reaction_model.rs  reaction_step_model.rs
pran-droid/api/: .gitignore  Cargo.toml
pran-droid/api/src/: main.rs
pran-droid/api/src/authentication/: authenticated.rs
pran-droid/api/src/brain/: mod.rs  simulate_action.rs  simulate_message.rs
pran-droid/api/src/emotions/: create.rs  get_all.rs  mod.rs
pran-droid/api/src/emotions/responses/: emotion_response.rs  mod.rs
pran-droid/api/src/images/: create.rs  get_all.rs  get_from_storage.rs  mod.rs
pran-droid/api/src/images/responses/: image_response.rs
pran-droid/api/src/infrastructure/: authenticated.rs  config.rs  mod.rs
pran-droid/api/src/reactions/: create.rs  get.rs  get_all.rs  insert_step.rs  mod.rs  patch.rs  remove_step.rs
pran-droid/api/src/reactions/models/: reaction_model.rs  reaction_step_model.rs
pran-droid/api/src/test_database/: build_test_database.rs  mod.rs
pran-droid/brain/: Cargo.toml
pran-droid/brain/src/: lib.rs  main.rs  run.rs  simulate.rs
pran-droid/brain/src/brain_output/: outputs.rs
pran-droid/brain/src/phonemiser/: mod.rs  pran_text_phonemiser.rs
pran-droid/brain/src/stream_interface/: events.rs
pran-droid/brain/src/stream_interface/twitch/: channel_events_stream.rs  twitch_interface.rs  user_id_from_login_name.rs
pran-droid/brain/src/test_database/: build_test_database.rs
pran-droid/brain/src/websocket_output/: outputs.rs
pran-droid/brain_console/: .gitignore  Cargo.toml
pran-droid/brain_console/src/: asciifier.rs  main.rs
pran-droid/core/: Cargo.toml
pran-droid/core/src/: lib.rs  main.rs
pran-droid/core/src/api/: mod.rs
pran-droid/core/src/api/emotions/: create.rs
pran-droid/core/src/api/images/: create.rs  get_all.rs  mod.rs
pran-droid/core/src/api/images/responses/: image_response.rs  mod.rs
pran-droid/core/src/api/reactions/: create.rs  get.rs  insert_step.rs
pran-droid/core/src/api/reactions/models/: reaction_model.rs  reaction_step_model.rs
pran-droid/core/src/application/: mod.rs
pran-droid/core/src/application/brain/: mod.rs  pran_droid_brain.rs
pran-droid/core/src/application/emotions/: create.rs  get.rs  get_all.rs  get_by_name.rs  mod.rs  update_layer.rs  update_mouth_layer.rs  update_mouth_mapping.rs
pran-droid/core/src/application/emotions/dtos/: emotion_dto.rs  mod.rs
pran-droid/core/src/application/images/: create.rs  get_all.rs  mod.rs
pran-droid/core/src/application/images/dtos/: image_dto.rs
pran-droid/core/src/application/reactions/: add_movement_step.rs  create.rs  get.rs  get_all.rs  insert_movement_step.rs  insert_talking_step.rs  mod.rs  remove_step.rs  update.rs
pran-droid/core/src/application/reactions/dtos/: mod.rs  reaction_dto.rs  reaction_step_dto.rs
pran-droid/core/src/domain/: mod.rs
pran-droid/core/src/domain/animations/: animation.rs  animation_domain_service.rs  animation_repository.rs  mod.rs
pran-droid/core/src/domain/brain/: builder.rs  mod.rs  pran_droid_brain.rs  stimuli.rs
pran-droid/core/src/domain/emotions/: emotion.rs  emotion_domain_service.rs  emotion_repository.rs  mod.rs
pran-droid/core/src/domain/images/: image.rs  image_repository.rs  image_storage.rs  mod.rs
pran-droid/core/src/domain/reactions/: mod.rs  reaction.rs  reaction_definition.rs  reaction_definition_repository.rs  reaction_domain_service.rs  reaction_repository.rs
pran-droid/core/src/persistence/: mod.rs
pran-droid/core/src/persistence/animations/: in_memory_animation_repository.rs  mod.rs
pran-droid/core/src/persistence/emotions/: in_memory_emotion_repository.rs  mod.rs
pran-droid/core/src/persistence/id_generation/: id_generation.rs  mod.rs
pran-droid/core/src/persistence/images/: in_memory_image_repository.rs  in_memory_image_storage.rs  mod.rs
pran-droid/core/src/persistence/reactions/: in_memory_reaction_repository.rs  mod.rs
pran-droid/core/src/persistence/test_database/: build_test_database.rs  mod.rs
pran-droid/persistence/migration/: Cargo.toml
pran-droid/persistence/migration/src/: m20220101_000001_create_images_table.rs  m20220624_190257_create_emotions_tables.rs  m20220625_002118_create_reactions_tables.rs  main.rs
pran-droid/persistence/repositories/: Cargo.toml
pran-droid/persistence/repositories/src/connectors/: connector.rs  sqlite.rs
pran-droid/persistence/repositories/src/emotions/: seaorm_emotion_repository.rs
pran-droid/persistence/repositories/src/images/: seaorm_image_repository.rs
pran-droid/persistence/repositories/src/reactions/: seaorm_reaction_definition_repository.rs
pran-droid/persistence_deta/: Cargo.toml
pran-droid/persistence_deta/src/: deta.rs  lib.rs
pran-droid/persistence_deta/src/animations/: animation.rs
pran-droid/persistence_deta/src/emotions/: deta_emotion_repository.rs  mod.rs
pran-droid/persistence_deta/src/images/: deta_image_repository.rs  deta_image_storage.rs  mod.rs
pran-droid/persistence_deta/src/reactions/: deta_reaction_repository.rs  mod.rs
pran-droid/persistence_sea_orm/migration/: Cargo.toml
pran-droid/persistence_sea_orm/migration/src/: lib.rs  m20220101_000001_create_images_table.rs  m20220624_190257_create_emotions_tables.rs  m20220625_002118_create_reactions_tables.rs  main.rs
pran-echo/: Aptfile  Pipfile  Procfile  RustConfig  requirements.txt
pran-echo/core/: .env  Cargo.toml  rust-toolchain
pran-echo/core/src/: check.py  main.rs  phonemiser.py
pran-echo/core/src/api_structures/: inputs.rs  outputs.rs
pran-echo/core/src/core/: config.rs  flat.rs  mod.rs  phoneme.rs
pran-echo/core/src/errors/: custom_error.rs
pran-echo/core/src/gentle/: gentle_api.rs  mod.rs
pran-echo/core/src/python/: mod.rs  python_api.rs
scripts/: heroku.build
(+300 files in other folders)
