[package]
name = "pran-droid-api"
version = "0.1.0"
authors = ["Pmyl <julo134@gmail.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.21"
log = "0.4.17"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket-multipart-form-data = "0.10.0"
serde = "1.0.128"
simplelog = "0.12.0"
thiserror = "1.0.30"
tokio = "1.19.2"
pran-droid-core = { path = "../core" }
pran-droid-brain = { path = "../brain" }
