[package]
name = "pran-droid-brain"
version = "0.1.0"
authors = ["Pmyl <julo134@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pran-droid-core = { path = "../core" }
dotenv = "0.15.0"
futures = "0.3.21"
log = "0.4.17"
simplelog = "0.12.0"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["multipart", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio =  { version = "1.18.2", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", features = ["io-util"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
twitch_api2 = { version = "0.6.1", features = ["pubsub"] }
twitch-irc = { version = "4.0.0" }
twitch_oauth2 = { version = "0.7.0", features = ["reqwest", "mock_api"] }
url = "2.2.2"
