[package]
name = "brain_console"
version = "0.1.0"
authors = ["Pmyl <julo134@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
dotenv = "0.15.0"
image = "0.24.2"
log = "0.4.17"
simplelog = "0.12.0"
tokio = { version = "1.19.2", features = ["macros"] }
pran-droid-brain = { path = "../brain" }
pran-droid-core = { path = "../core" }
pran-droid-persistence-deta = { path = "../persistence_deta" }