[package]
name = "pran-droid-core"
version = "0.1.0"
authors = ["Pmyl <julo134@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket-multipart-form-data = "0.10.0"
serde = "1.0.128"
pran-phonemes-core = { path = "../../pran-phonemes/core" }
rand = "0.8.5"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["v4"] }