[package]
name = "pran-droid-persistence-deta"
version = "0.1.0"
authors = ["Pmyl <julo134@gmail.com>"]
edition = "2021"

[lib]
name = "pran_droid_persistence_deta"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.56"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
uuid = { version = "1.1.2", features = ["v4"] }
pran-droid-core = { path = "../core" }
