[package]
name = "pran-echo-core"
version = "0.1.0"
authors = ["Pmyl <julo134@gmail.com>"]
edition = "2018"

[dependencies]
pyo3 = "0.14.2"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket-multipart-form-data = "0.10.0"
serde = "1.0.128"
uuid = { version = "0.8.2", features = ["v4"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["multipart", "json"] }
tokio-util = "0.6.9"
tokio = "1.13.0"
futures-util = "0.3.1"
