[package]
name = "pran-droid-persistence"
version = "0.1.0"
authors = ["Pmyl <julo134@gmail.com>"]
edition = "2021"

[dependencies]
itertools = "0.10.3"
uuid = { version = "1.1.2", features = ["v4"] }
async-trait = "0.1.56"
sea-orm = { version = "0.8.0", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde_json = "1.0.81"
pran-droid-core = { path = "../../core" }
pran-droid-persistence-entities = { path = "../entities" }
pran-droid-persistence-migration = { path = "../migration" }
